<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/autumn"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txtNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="27dp"
        android:text="@string/txtNombre"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgSeguir"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:onClick="Seguir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgAtras"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2"
        app:srcCompat="@drawable/next_2" />

    <ImageView
        android:id="@+id/imgAtras"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imgSeguir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgSeguir"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/txtPregunta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:text="@string/txtPregunta1"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="@+id/txtNombre"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="114dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="123dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="125dp"
        app:layout_constraintBottom_toBottomOf="@+id/chkTigre"
        app:layout_constraintEnd_toStartOf="@+id/imageButton5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtNombre">

        <RadioButton
            android:id="@+id/rdoNoemi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNoemi"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/rdoNoe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtNoe"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtPregunta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="26dp"
        android:text="@string/txtPregunta2"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="@+id/imageButton5"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/chkTigre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/txtTigre"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/chkLeon"
        app:layout_constraintStart_toStartOf="@+id/txtPregunta2" />

    <CheckBox
        android:id="@+id/chkLeon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="21dp"
        android:text="@string/txtLeon"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/chkTigre"
        app:layout_constraintTop_toBottomOf="@+id/txtPregunta2" />

    <TextView
        android:id="@+id/txtPregunta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="53dp"
        android:text="@string/txtPregunta3"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chkTigre" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="206dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/txtPregunta3"
        app:layout_constraintTop_toBottomOf="@+id/txtPregunta3">

        <RadioButton
            android:id="@+id/rdoDavid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDavid"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/rdoSaul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSaul"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/rdoSalomon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtSalo"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RadioGroup>

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="0dp"
        android:layout_height="143dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="51dp"
        app:layout_constraintBottom_toBottomOf="@+id/txtPregunta2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toTopOf="@+id/txtPregunta1"
        app:srcCompat="@mipmap/arca" />

</androidx.constraintlayout.widget.ConstraintLayout>